--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body{
     position: absolute;
     width:10vw;
     height:20vh;
-    cursor: url('./imgs/at3qd-6v759-001.ico'),auto;
+    cursor: url('./at3qd-6v759-001.ico'),auto;
 }
 .cont #alpha-1{
     top:12vh;
