--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
     width:10vw;
     height:20vh;
     /* background: aqua; */
-    cursor: url('./at3qd-6v759-001.ico'),auto;
+    cursor: url('./imgs/at3qd-6v759-001.ico'),auto;
 }
 .cont #alpha-1{
     top:12vh;
